<resources>
    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="button_support">Написать в поддержку</string>
    <string name="button_share">Поделиться приложением</string>
    <string name="button_eula">Пользовательское соглашение</string>
    <string name="mail_support">idio24@yandex.ru</string>
    <string name="text_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject_support">Сообщение разработчикам и разработчицам приложения Playlist Maker!</string>
    <string name="link_eula">https://yandex.ru/legal/practicum_offer/</string>
    <string name="link_share">https://practicum.yandex.ru/android-developer//</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="media_is_empty">Ваша медиатека пуста</string>
    <string name="something_went_wrong">Проблемы со связью \n
        \n
        Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_playlists">Вы не создали \n
        ни одного плейлиста</string>
    <string name="delete_playlist">Хотите удалить плейлист?</string>
    <string name="favorite">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist">Плейлист</string>
    <string name="searched">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="back">Назад</string>
    <string name="cover">Обложка</string>
    <string name="like">Нравится</string>
    <string name="play">Воспроизведение</string>
    <string name="pause">Пауза</string>
    <string name="add">Сохранить</string>
    <string name="time_example">00:00</string>
    <string name="add_to_favorite">Добавлено в избранное</string>
    <string name="remove_from_favorite">Удалено из избранного</string>"
    <string name="new_playlist">Новый плейлист</string>"
    <string name="title">Название*</string>"
    <string name="description">Описание</string>"
    <string name="create">Создать</string>"
    <string name="edit">Редактировать</string>"
    <string name="created">cоздан</string>"
    <string name="necessary">*Обязательное поле</string>"
    <string name="finished_title">Завершить создание плейлиста?</string>"
    <string name="finished_title_message">Все несохраненные данные будут потеряны</string>"
    <string name="clear_history_button">Очистить историю</string>"
    <string name="refresh">Обновить</string>"


</resources>