<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    style="@style/bg">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="12dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/primary_text_size" />
    </FrameLayout>


    <Button
        android:id="@+id/button_search"
        style="@style/MainButtons"
        android:layout_marginTop="24dp"
        android:text="@string/button_search"
        app:icon="@drawable/search"
        />

    <Button
        android:id="@+id/button_media"
        style="@style/MainButtons"
        android:layout_marginTop="16dp"
        android:text="@string/button_media"
        app:icon="@drawable/media"
        />

    <Button
        android:id="@+id/button_settings"
        style="@style/MainButtons"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/button_settings"
        app:icon="@drawable/settings"
        />

</LinearLayout>



