<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    style="@style/bg"
    android:animateLayoutChanges="true"
    tools:context="com.practicum.playlistmaker.settings.ui.SettingsFragment">

    <FrameLayout
        style="@style/FrameSettings"
        android:layout_height="80dp"
        android:layout_weight="0">

        <TextView
            style="@style/TextSettings"
            android:layout_marginStart="@dimen/sixteen_layout"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/button_settings"
            android:textSize="@dimen/primary_text_size" />

    </FrameLayout>

    <FrameLayout
        style="@style/FrameSettings"
        >

        <TextView
            style="@style/TextSettings"
            android:text="@string/dark_theme"
             />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/SwitchSettings"/>

    </FrameLayout>

    <FrameLayout
        style="@style/FrameSettings"
        android:id="@+id/button_share"
        >

        <TextView
            style="@style/TextSettings"
            android:text="@string/button_share"
             />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/share"
            tools:ignore="ContentDescription"/>

    </FrameLayout>

    <FrameLayout
        style="@style/FrameSettings"
        android:id="@+id/button_support"
        >

        <TextView
            style="@style/TextSettings"
            android:text="@string/button_support"
            />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/support"
            tools:ignore="ContentDescription"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/button_eula"
        style="@style/FrameSettings"
        >

        <TextView
            style="@style/TextSettings"
            android:text="@string/button_eula"
            />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/right_arrow"
            tools:ignore="ContentDescription"/>

    </FrameLayout>


    <LinearLayout
        style="@style/FrameSettings"
        android:layout_gravity="bottom"
        android:layout_weight="5">
    </LinearLayout>


</LinearLayout>