<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/icon_black">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/primary_text_size" />
    </FrameLayout>


    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="@string/button_search"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/icon_black"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="16dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/icon_black" />

    <Button
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="@string/button_media"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/icon_black"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="16dp"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/icon_black" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="@string/button_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/icon_black"
        android:textSize="@dimen/primary_text_size"
        app:cornerRadius="16dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/icon_black" />

</LinearLayout>



