<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        style="@style/FrameSettings"
        android:layout_height="80dp"
        android:layout_weight="0">

        <ImageView
            android:id="@+id/button_back"
            style="@style/ImageSettings"
            android:layout_gravity="start|center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/back" />

        <TextView
            style="@style/TextSettings"
            android:layout_marginStart="52dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/button_settings"
            android:textSize="@dimen/primary_text_size" />

    </FrameLayout>

    <FrameLayout
        style="@style/FrameSettings"
        >

        <TextView
            style="@style/TextSettings"
            android:text="@string/dark_theme"
             />

        <Switch
            style="@style/SwitchSettings"/>

    </FrameLayout>

    <FrameLayout
        style="@style/FrameSettings"
        android:id="@+id/button_share"
        >

        <TextView
            style="@style/TextSettings"
            android:text="@string/button_share"
             />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/share"/>

    </FrameLayout>

    <FrameLayout
        style="@style/FrameSettings"
        android:id="@+id/button_support"
        >

        <TextView
            style="@style/TextSettings"
            android:text="@string/button_support"
            />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/support"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/button_eula"
        style="@style/FrameSettings"
        >

        <TextView
            style="@style/TextSettings"
            android:text="@string/button_eula"
            />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/right_arrow"
            />

    </FrameLayout>


    <LinearLayout
        style="@style/FrameSettings"
        android:layout_gravity="bottom"
        android:layout_weight="5">

        <!-- Кнопки внизу
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_search"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/icon_black"
            android:textSize="@dimen/small_text_size"
            app:cornerRadius="0dp"
            app:icon="@drawable/search"
            app:iconGravity="textTop"
            app:iconPadding="5dp"
            app:iconTint="@color/icon_black" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_media"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/icon_black"
            android:textSize="@dimen/small_text_size"
            app:cornerRadius="0dp"
            app:icon="@drawable/media"
            app:iconGravity="textTop"
            app:iconPadding="4dp"
            app:iconTint="@color/icon_black" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/button_settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/icon_black"
            android:textSize="@dimen/small_text_size"
            app:cornerRadius="0dp"
            app:icon="@drawable/settings"
            app:iconGravity="textTop"
            app:iconPadding="0dp"
            app:iconTint="@color/icon_black" />
            -->
    </LinearLayout>


</LinearLayout>