<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />


            <ImageView
                android:id="@+id/cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_26"
                android:layout_marginEnd="@dimen/dp_8"
                android:contentDescription="@string/cover"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/track_name"
                style="@style/fontPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_8"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/primary_text_size"
                app:layout_constraintBottom_toTopOf="@+id/artist_name"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/cover"
                tools:text="Smells Like Teen" />

            <TextView
                android:id="@+id/artist_name"
                style="@style/fontPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_12"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/small_text_size_14"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/track_name"
                tools:text="Smells Like Teen" />

            <ImageButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_54"
                android:background="@android:color/transparent"
                android:contentDescription="@string/add"
                android:src="@drawable/add"
                app:layout_constraintEnd_toStartOf="@id/play_button"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/artist_name" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/play"
                android:src="@drawable/play"
                app:layout_constraintBottom_toBottomOf="@id/add_button"
                app:layout_constraintEnd_toStartOf="@+id/like_button"
                app:layout_constraintStart_toEndOf="@id/add_button"
                app:layout_constraintTop_toTopOf="@id/add_button" />

            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_8"
                android:background="@android:color/transparent"
                android:contentDescription="@string/like"
                android:src="@drawable/like"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/play_button"
                app:layout_constraintTop_toTopOf="@id/add_button" />

            <TextView
                android:id="@+id/progress"
                style="@style/fontPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_134"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/small_text_size_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artist_name"
                tools:text="0:30" />

            <TextView
                android:id="@+id/duration"
                style="@style/fontPlayer"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_39"
                android:text="@string/duration"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/progress" />

            <TextView
                android:id="@+id/duration_time"
                style="@style/fontPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/progress"
                app:layout_constraintTop_toTopOf="@id/duration"
                tools:text="5:30" />

            <TextView
                android:id="@+id/album"
                style="@style/fontPlayer"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_71"
                android:text="@string/album"
                app:layout_constraintEnd_toStartOf="@id/album_name"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintTop_toBottomOf="@id/progress" />

            <TextView
                android:id="@+id/album_name"
                style="@style/fontPlayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textDirection="rtl"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/progress"
                app:layout_constraintTop_toTopOf="@id/album"
                android:layout_marginStart="50dp"
                app:layout_constraintStart_toEndOf="@id/album"
                android:maxLines="1"
                android:ellipsize="marquee"
                tools:text="Smells Like Teen" />

            <TextView
                android:id="@+id/year"
                style="@style/fontPlayer"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_103"
                android:text="@string/year"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/progress" />

            <TextView
                android:id="@+id/year_name"
                style="@style/fontPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/progress"
                app:layout_constraintTop_toTopOf="@id/year"
                tools:text="1991" />

            <TextView
                android:id="@+id/genre"
                style="@style/fontPlayer"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_135"
                android:text="@string/genre"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/progress" />

            <TextView
                android:id="@+id/genre_name"
                style="@style/fontPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/progress"
                app:layout_constraintTop_toTopOf="@id/genre"
                tools:text="Rock" />

            <TextView
                android:id="@+id/country"
                style="@style/fontPlayer"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_167"
                android:text="@string/country"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/progress" />

            <TextView
                android:id="@+id/country_name"
                style="@style/fontPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/progress"
                app:layout_constraintTop_toTopOf="@id/country"
                tools:text="Великобритания" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/topBar"
        style="@style/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageButton
        style="@style/ImageSettings"
        android:id="@+id/back_button"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@null"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        android:foreground="?attr/selectableItemBackground"/>

</androidx.constraintlayout.widget.ConstraintLayout>